syntax = "proto3";

package dto;

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string result = 1;
}
